<resources>
    <string name="app_name">Expresso</string>
    <string name="view">View</string>
    <string name="create">Create</string>
    <string name="add_person">Add Person</string>
    <string name="add_question">Add Question</string>
    <string name="add_video">Add Video</string>
    <string name="next">Next</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="do_magic">Tap to generate Magic Link</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="add_option">Add Option</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="video_upload_src_question">Where should we grab the video from?</string>
    <string name="audio_upload_src_question">Where should we grab the audio from?</string>
    <string name="media_upload_from_gallery_option">Let me pick one</string>
    <string name="media_upload_record_option">I\'ll record one!</string>
    <string name="video_chooser_intent_title">Select Video</string>
    <string name="image_chooser_intent_title">Select Picture</string>
    <string name="audio_chooser_intent_title">Select Audio</string>
    <string name="link_copied_toast_msg">Copied the link!</string>
    <string name="surprise_message">YOUR DEAR ONES HAVE A LITTLE SURPRISE FOR YOU</string>
    <string name="ready">Ready?</string>
    <string name="generic_retry_error">Oops! Something went wrong. Please try again</string>
    <string name="recipient_name_empty"> Oops! Recipient name cannot be empty</string>
    <string name="dismiss_without_recording">Looks like you did not record anything.</string>
    <string name="audio_record_permission_rejected_message">Without permission to record audio, you would be restricted to only being able to upload one :(</string>
    <string name="incorrect_option_selected">Umm, that doesn\'t seem right!\nGive it another try</string>
</resources>
