<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_custom_credentials"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.minesweepers.birthday.activities.CreateCustomCredentialsActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_username"
        android:hint="@string/enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_password"
        android:hint="@string/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_do_magic"
        android:text="@string/do_magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
